--- a/Frequency_Analysis.ipynb
+++ b/Frequency_Analysis.ipynb
@@ -153,7 +153,7 @@
         "id": "xQcRtCUhYWzu"
       },
       "source": [
-        "# Workshop 3: Frequency Analysis\n",
+        "# Frequency Analysis\n",
         "\n",
         "**A picture is worth a thousand words**. We are all familiar with this expression. It especially applies when trying to explain the insight obtained from the analysis of increasingly large datasets. Data visualization plays an essential role in the representation of both small and large-scale data.\n",
         "\n",
